# openapi/talk.yml
@@ -68,6 +68,10 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LeaveChannelResponse'
       description: Leave from the channel.
       requestBody:
         content:
@@ -678,25 +682,21 @@ components:
             - members
     LeaveChannelRequest:
       title: LeaveChannelRequest
-      x-stoplight:
-        id: jnz7w0uhekotj
       type: object
       properties:
         channelNo:
           type: integer
-          x-stoplight:
-            id: wm0v9ylk0oqx8
           default: 0
         channelNoList:
           type: array
-          x-stoplight:
-            id: xsoyen75lsqqb
           items:
-            x-stoplight:
-              id: 4n3jg601c5jc3
             type: integer
       required:
         - channelNoList
+    LeaveChannelResponse:
+      title: LeaveChannelResponse
+      allOf:
+        - $ref: '#/components/schemas/BaseResponse'
   responses: {}
   requestBodies: {}
   parameters:
